# Pybooster

./: .astyle.ini  .bandit.ini  .checksums.b2b512  .checksums.rmd160  .checksums.sha1  .checksums.sha512  .checksums.whirlpool  .cppcheckrc  .csslintrc  .editorconfig  .eslintrc  .gitattributes  .gitignore  .gitlint  .gitmodules  .pdbrc  .pylintrc  .travis.yml  2  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Coding_Standards.md  Doxyfile  NEWS  README.md  THANKS  TODO  checksums.b2b512  checksums.md5  checksums.rmd160  checksums.sha1  checksums.sha512  checksums.whirlpool  makedoc.sh  makefile  makefile_constants.mk  profiles.mk  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
accessory/: Program-Analyzer.desktop  Ubuntu_Repos.list  XCompose  color-kit.glade  desktop-entry-maker.glade  getgpgkeys.sh  hosts  mime.types  mimetype_booster.xml  profile  program-analyzer.glade  shell_ext  uca.xml
databases/: Bible-KJV.csv.xz  Bible-KJV.sqlitedb.xz  CSS_Properties.json  Debian_Release_Codenames.csv  Linux_Mint_Release_Codenames.csv  Text_Encodings.json  Ubuntu_Release_Codenames.csv  Zip_Codes2FIPS.json  Zip_Codes_Croatian.json  unix_top_level.json
doc/: astronomy.txt  basic.txt  bitwise.txt  chemistry.txt  clibutil.txt  code_interpreter.txt  color.txt  compress.txt  convarea.txt  convlength.txt  convmass.txt  convspeed.txt  convtemp.txt  convtime.txt  convvolume.txt  cryptography.txt  electronics.txt  ezdisplay.txt  ezwin.txt  ezwin_ezwin.txt  ezwin_ezwin_ezcolor.txt  ezwin_ezwin_ezerr.txt  ezwin_ezwin_ezfilech.txt  ezwin_ezwin_ezinfo.txt  ezwin_ezwin_ezmsg.txt  ezwin_ezwin_ezpswd.txt  ezwin_ezwin_ezq.txt  ezwin_ezwin_ezsecurity.txt  ezwin_ezwin_eztext.txt  ezwin_ezwin_ezupd.txt  ezwin_ezwin_ezwarn.txt  financial.txt  fs.txt  geo_services.txt  mathfunc.txt  metric.txt  net.txt  neuralnet.txt  pipx.txt  pronouns.txt  (+9 more)
geany/: filetype_extensions.conf  geany-3.0.css  geany-3.20.css  geany.css  geany.glade  geany.gtkrc  keybindings.conf  snippets.conf  ui_toolbar.xml
include/: Foundation.h  MACROS.h  MACROS2.h  MACROS3.h  MACROS_MATH.h  MACROS_MISC.h  MACROS_NET.h  alpha.def  ansi_sgr_codes.h  armscii.h  atarist.h  big5.def  cjk_variants.h  cns11643_1.h  cns11643_15.h  cns11643_2.h  cns11643_3.h  cns11643_4a.h  cns11643_4b.h  cns11643_5.h  cns11643_6.h  cns11643_7.h  cns11643_inv.h  file_signatures.h  fs_constants.h  fspaths.h  gb18030.def  hkscs.def  iso-4217.h  jis0208.def  ksc.def  legacychars.def  math_tables.h  nextstep.h  nonspacing.def  punct.def  rune_tables.h  start_x86_64.s  stringpool.h  viscii.h  (+2 more)
jslib/: libajax.js  libhtml.js  libstr.js  libtime.js  libutils.js
mk/: compiling.mk  constants.mk  project.mk  variables.mk
phplib/: colorlib.php  mathlib.php  strlib.php
pybooster/: __init__.py  astronomy.py  basic.py  bitwise.py  clibutil.py  code_interpreter.py  color.py  compress.py  convarea.py  convlength.py  convmass.py  convspeed.py  convtemp.py  convtime.py  convvolume.py  cryptography.py  electronics.py  ezdisplay.py  financial.py  fs.py  geo_services.py  metric.py  net.py  neuralnet.py  pipx.py  pronouns.py  (+8 more)
themes/OptiView/gnome-shell/src/: gnome-shell-high-contrast.scss  gnome-shell.scss  meson.build  parse-sass.sh
themes/OptiView/gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss  _high-contrast-colors.scss
(+1873 files in other folders)
